syntax = "proto3";

option go_package = "github.com/eskpil/tulip/core/pkg/gateway";

message PublishRequest {
  string subject = 1;
  string entity_id = 2;
  bytes payload = 3;
}

message PublishResponse {
  bool ok = 1;
}

service gateway {
  rpc Publish(PublishRequest) returns (PublishResponse);
}